https://github.com/cferdinandi/smooth-scroll adding for smooth scroll animation

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -30,6 +30,8 @@ block content
                 div#contact-form
 
 block js
-    script(src='/js/app.js')
     script(src='/js/react.js', type='text/babel')
     script(src='/js/contact-form.js', type='text/babel')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js')
+    script(src='https://rawgit.com/metafizzy/isotope-masonry-horizontal/master/masonry-horizontal.js')
+    script(src='http://rawgit.com/metafizzy/isotope-packery/master/packery-mode.pkgd.js')
