--- a/templates/includes/navbar.jade
+++ b/templates/includes/navbar.jade
@@ -5,5 +5,5 @@ block navbar
                 a.navbar-brand(href='/') <span class="text-highlighted">C</span>utify
             ul.nav.navbar-nav.navbar-right.hidden-xs
                 each link in navLinks
-                    li(class=(section === link.key ? 'active' : null)): a(href=link.link)= link.label
+                    li(class=(section === link.key ? 'active' : null)): a(href=link.link data-scroll)= link.label
             //a.btn.btn-default.navbar-btn.pull-right(href='/keystone') Sign In
