--- a/templates/layouts/base.jade
+++ b/templates/layouts/base.jade
@@ -7,6 +7,7 @@ html(lang="en")
         link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
         link(href="https://fonts.googleapis.com/css?family=Raleway:300,400", rel="stylesheet" type="text/css")
         link(href="/styles/style.css", rel="stylesheet")
+        script(src='//code.jquery.com/jquery-1.12.0.min.js')
 
         block css
         block head
@@ -23,11 +24,7 @@ html(lang="en")
         include ../includes/footer
         block footer
 
-
-    script(src='//code.jquery.com/jquery-1.12.0.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js')
-    script(src='https://rawgit.com/metafizzy/isotope-masonry-horizontal/master/masonry-horizontal.js')
-    script(src='http://rawgit.com/metafizzy/isotope-packery/master/packery-mode.pkgd.js')
+    script(src='/js/vendor/smooth-scroll.min.js')
     block js
 //include ../mixins/flash-messages
 //
