--- a/templates/layouts/base.jade
+++ b/templates/layouts/base.jade
@@ -6,7 +6,7 @@ html(lang="en")
         meta(name="viewport", content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width")
         link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
         link(href="https://fonts.googleapis.com/css?family=Raleway:300,400", rel="stylesheet" type="text/css")
-        link(href="/styles/style.css", rel="stylesheet")
+        link(href="/styles/style.min.css", rel="stylesheet")
         script(src='//code.jquery.com/jquery-1.12.0.min.js')
 
         block css
